tests/sksl/errors/ReservedNameUnion.glsl
### Compilation failed:

error: 1: 'union' is a reserved word
int union;
    ^^^^^
1 error
